# DepGraph

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  spellcheck-settings.yml  wordlist.txt
.github/workflows/: ci.yml  dependency-review.yml  frontend.yml  lint.yml  publish-docker.yml  spellcheck.yml  tests.yml
data/: sample_ecosystem.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  canvas-types.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: GraphCanvas.tsx  PackageSelector.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/views/: BlastRadiusView.tsx  CentralityView.tsx  CyclesView.tsx  DashboardView.tsx  ExportView.tsx  ImportView.tsx  LicensesView.tsx  VulnerabilitiesView.tsx
src/depgraph/: __init__.py  api.py  cli.py  config.py  db.py  logging.py  models.py  sbom.py  webhooks.py
src/depgraph/graph/: engine.py  queries.py  schema.py
src/depgraph/ingest/: osv.py  parsers.py  registry.py  seed.py
tests/: conftest.py  test_api.py  test_config.py  test_engine.py  test_integration.py  test_models.py  test_osv.py  test_queries.py  test_registry.py  test_sbom.py  test_seed.py  test_webhooks.py
